Add again button listener

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
   align-items: center;
   gap: 3.2rem;
 
-  /* background-color: #60b347;  #1e3e57*/
+  /* background-color: #60b347;  #1e3e57 #5996c6*/
 }
 
 /* LAYOUT */
